--- a/RaveBox/Assembly-CSharp.csproj
+++ b/RaveBox/Assembly-CSharp.csproj
@@ -53,7 +53,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\src\entorno\Ascensor.cs" />
+     <Compile Include="Assets\src\entorno\Teleport.cs" />
      <Compile Include="Assets\src\index.cs" />
+     <Compile Include="Assets\src\personaje\movimiento.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>D:/GameJam/RaveBox/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
