--- a/RaveBox/Assembly-CSharp.csproj
+++ b/RaveBox/Assembly-CSharp.csproj
@@ -53,7 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\src\entorno\Ascensor.cs" />
+     <Compile Include="Assets\src\entorno\movePlataform.cs" />
+     <Compile Include="Assets\src\entorno\piñones.cs" />
      <Compile Include="Assets\src\entorno\Teleport.cs" />
      <Compile Include="Assets\src\index.cs" />
      <Compile Include="Assets\src\personaje\movimiento.cs" />
